# mail-blackhole

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.org  flake.nix
src/: api.rs  app.rs  http.rs  lib.rs  mail.rs  main.rs
style/: style.css
tests/: with-attachment.mail  without-attachment.mail
